# code-from-docs

./: .env.example  .gitignore  ADOPTING.md  CLAUDE.md  CONTRIBUTING.md  COST.md  Cargo.toml  README.md
.github/prompts/: generate-backlog.md  implement-issue.md
.github/workflows/: auto-maintain.yml  ci.yml  docs-watch.yml  generate-backlog.yml  probe.yml  probe2.yml  probe3.yml  reusable-claude.yml  reusable-discord.yml  reusable-notify.yml  reusable-pr-comment.yml
docs/: 00-vision.md  01-architecture.md  02-agent-harness.md  03-roadmap.md  README.md
specs/: README.md  backlog-state.json
src/: agent.rs  harness.rs  lib.rs  main.rs  message.rs  render.rs  tool.rs
tests/: harness_test.rs  render_test.rs  typed_tool_test.rs
